--- a/Final/Final_Exam.ipynb
+++ b/Final/Final_Exam.ipynb
@@ -11,13 +11,22 @@
     "**Harvard University**  \n",
     "**Spring 2017**  \n",
     "**Instructor: Rahul Dave**  \n",
-    "**Due Date: May 12th, 2017, 11:59pm** \n",
+    "**Due Date: May 13th, 2017, 11:59pm (no exceptions)** \n",
     "\n",
     "**Instructions:**\n",
     "\n",
     "- Upload your final answers as well as your iPython notebook containing all work to Canvas.\n",
     "\n",
-    "- Structure your notebook and your work to maximize readability."
+    "- Structure your notebook and your work to maximize readability.\n",
+    "\n",
+    "**Collaboration Policy:**\n",
+    "\n",
+    "- You must submit only your own work - if you are adapting code from the internet, cite your source.\n",
+    "\n",
+    "- You may not collaborate, consult or discuss with anyone, excepting the following, on the final:\n",
+    "\n",
+    "  - You may ask and answer questions on Piazza as long as the content does not give away any part of the solution (inappropriate questions and answers will be removed).\n",
+    "  - You may consult your TF or instructor (special office hours for the final exam will be announced on Piazza, and you may make individual appointments)."
    ]
   },
   {
@@ -31,7 +40,9 @@
     "\n",
     "In this problem you are asked to build a hierarchical Bayesian ANN to classify the MNIST dataset (properly split into training and test sets) that we have used before in Long Homework #1, and to infer uncertainties for the weighths and the resulting classes. Variational inference can become very handy here: instead of drawing samples from the posterior, these algorithms fit a distribution (e.g. normal) to the posterior turning a sampling problem into and optimization problem. ADVI -- Automatic Differentation Variational Inference is implemented in PyMC3 and Stan. \n",
     "\n",
-    "Read this [blog post](http://twiecki.github.io/blog/2016/07/05/bayesian-deep-learning/) to get an idea about the problem, and to see how some of the ADVI related technology is set up.\n",
+    "Read this [blog post](http://twiecki.github.io/blog/2016/07/05/bayesian-deep-learning/) and [this one](http://twiecki.github.io/blog/2016/06/01/bayesian-deep-learning/) to get an idea about the problem, and to see how some of the ADVI related technology is set up.\n",
+    "\n",
+    "**In the implementation you must use pure pymc3 and theano (or stan), you may not use keras or lasagne.**\n",
     "\n",
     "### Part A: Bayesian ANN\n",
     "\n",
@@ -39,11 +50,20 @@
     "\n",
     "Here we will build a Bayesian Artificial Neural Network. \n",
     "\n",
-    "Build an artificial neural network in pymc3 (or Stan, your choice) with two hidden layers and 25 neurons in each, and use it to classify the MNIST dataset. Use the $\\tanh$ function as the activation function, and initialize ALL the weights using using normal priors with $\\mu=0$ and two different values for $\\sigma = 0.03, 0.1$.\n",
+    "Build an artificial neural network in pymc3 (or Stan, your choice) with two hidden layers and 25 neurons in each, and use it to classify the MNIST dataset. The architecture will look like the one below:\n",
+    "<img src=\"ANN2.png\">\n",
+    "Recall that for each node in a fixed layer, you will be applying an activation function to a linear combination of the outputs from the previous layer with a constant term (called the bias):\n",
+    "<img src=\"ANN.jpg\">\n",
+    "\n",
+    "Use the $\\tanh$ function as the activation function, and initialize ALL the weights using using normal priors with $\\mu=0$ and two different values for $\\sigma = 0.03, 0.1$.\n",
     "\n",
     "1. You could use a MCMC sampler such as NUTS to train your model. But this could be extremely slow as you add more layer or more units. Instead, use the PyMC3/Stan ADVI implementation to approximate the posteriors of the weights, and obtain the posterior means, standard deviations, and the evidence lower bound (ELBO), which is your objective function. Use mini-batch gradient descent for the optimization (a minibatch size of 500 is appropriate), and a todal of 50000 ADVI iterations.\n",
     "\n",
-    "2. Plot the objective function (ELBO) as a function of the iteration. Using the best fit from your training, predict on the test set by estimating posterior predictives for the classes in each case, and provide the accuracy of your classification. How does your accuracy compare for the two values of $\\sigma$? *Hint: if you need traces to perform inference, you can sample directly from the normal distribution that ADVI outputs*.\n",
+    "**Hint:** You should organize the weights between two consecutive layers as a matrix. It would be extremely beneficial for you to first work out the dimensions of these matrices before doing any coding.\n",
+    "\n",
+    "2. Plot the objective function (ELBO) as a function of the iteration. Using the best fit from your training, predict on the test set by estimating posterior predictives for the classes in each case, and provide the accuracy of your classification. How does your accuracy compare for the two values of $\\sigma$? \n",
+    "\n",
+    "**Hint:** if you need traces to perform inference, you can sample directly from the normal distribution that ADVI outputs.\n",
     "\n",
     "\n",
     "### Part B: Hierarchical ANN\n",
@@ -80,7 +100,7 @@
     "\n",
     "\n",
     "### Part A: K-Means\n",
-    "K-Means is a fast and simple unsupervised clustering algorithm that produces a hard clustering of the data, each data point is assigned a cluster. Fit a K-Means model from `sklearn` on your training data ([see example code half-way down this page](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html)). Investigate the cluster memebership in order to label one cluster \"full term\" and the other \"preterm\". Use your model to assign each data point to a cluster and classify the data point as \"full term\" or \"preterm\", based on the label of its assigned cluster. Compute the classification error on the training set and on the test set. \n",
+    "K-Means is a fast and simple unsupervised clustering algorithm that produces a hard clustering of the data, each data point is assigned a cluster. Fit a K-Means model from `sklearn` on your training data ([see example code half-way down this page of documentation](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) see also ). Investigate the cluster memebership in order to label one cluster \"full term\" and the other \"preterm\". Use your model to assign each data point to a cluster and classify the data point as \"full term\" or \"preterm\", based on the label of its assigned cluster. Compute the classification error on the training set and on the test set. \n",
     "\n",
     "Do your findings support our hypothesis?\n",
     "\n",
@@ -168,15 +188,6 @@
     "\n",
     "Modify your `pymc3` model in Part C to sample $\\Sigma_k$ from a distribution supported over full covariance matrices, using LJK distributions. A tutorial for how to do this can be found [here](http://austinrochford.com/posts/2015-09-16-mvn-pymc3-lkj.html) and in [these lecture notes](https://am207.github.io/2017/wiki/corr.html)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
